syntax = "proto3";

package calculator;

option go_package = "github.com/saeedjhn/go-grpc/calculator/proto";

message SumRequest {
  int32 first_num = 1;
  int32 second_num = 2;
}

message SumResponse {
  int32 result = 1;
}